# vimdir

./: .gitignore  Cargo.toml  LICENSE  README.txt  about.hbs  about.toml
.github/workflows/: rust.yml
doc/: .gitignore  Makefile  cargo-about.sh  vidir.1.ronn  vidir.7.ronn
doc/cargo-about/: about.hbs  about.toml  run-cargo-about
doc/man/: Makefile
src/: dirops.rs  editor.rs  keyedbag.rs  main.rs  vimdir.rs
