[package]
authors = ["Andreas Schärtl <andreas@schaertl.me>"]
description = "Edit Directories in Your $EDITOR"
edition = "2018"
license = "GPL-2.0-only"
license-file = "COPYING"
name = "vimdir"
readme = "README.txt"
repository = "https://github.com/kissen/vimdir"
version = "0.1.0"

[dependencies]
anyhow = "1.0.0"
fs_extra = "1.2.0"
git-version = "0.3.4"
structopt = { version = "0.3.21", default-features = false }
tempdir = "0.3.7"
