[package]
authors = ["Andreas Schärtl <andreas@schaertl.me>"]
categories = ["command-line-utilities", "text-editors", "filesystem"]
description = "Edit Directories in Your $EDITOR"
edition = "2018"
include = ["**/*.rs", "Cargo.toml", "README.txt", "doc/COPYING"]
license = "GPL-2.0-only"
name = "vimdir"
readme = "README.txt"
repository = "https://github.com/kissen/vimdir"
version = "0.4.0"

[dependencies]
anyhow = "1.0.97"
fs_extra = "1.3.0"
git-version = "0.3.9"
structopt = { version = "0.3.26", default-features = false }
tempdir = "0.3.7"
